# Lentik

./: .gitignore  DEPLOY.md  LICENSE  README.md  pyproject.toml
services/api/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
services/api/alembic/: env.py
services/api/alembic/versions/: 0001_initial.py  002_messenger_features.py  003_profile_and_edit.py  004_display_name.py  005_bio_and_birthday.py  006_gallery_file_meta.py  007_message_mentions.py  008_calendar_events.py  009_message_attachments.py  010_message_reactions.py  010_notes.py  011_message_read_receipts.py  012_user_presence.py  013_chat_pinned_message.py  014_calendar_event_reminders.py  015_invite_usage_limits.py  016_merge_notes_invites_heads.py  017_expenses_v1.py  018_budget_transactions.py  019_reminders.py  020_chat_channel_settings.py  021_family_tree.py  022_family_tree_positions.py  023_gallery_file_media_type.py  024_user_password_changed_at.py  025_bots.py  025_user_ui_mode.py  026_family_roles.py  027_admin_bit_to_31.py  028_permission_overrides.py  029_audit_log.py  030_member_permission_overrides.py  031_moderation_settings.py  032_login_throttle.py  033_drop_sessions.py  034_developer_and_bans.py  (+3 more)
services/api/app/: main.py
services/api/tests/: conftest.py  test_audit_and_transfer.py  test_auth_token_storage.py  test_gating_http.py  test_login_throttle.py  test_low_hardening.py  test_privilege_escalation.py  test_read_access_gating.py  test_role_protections.py  test_security_headers.py  test_seed_and_permissions.py  test_upload_security.py
(+275 files in other folders)
